--- a/src/app/pages/addons/chart-cadastro/chart-cadastro.component.html
+++ b/src/app/pages/addons/chart-cadastro/chart-cadastro.component.html
@@ -1,9 +1,10 @@
-<canvas baseChart
-        class="w-100"
-        [data]="barChartData"
-        [options]="barChartOptions"
-        [labels]="barChartLabels"
-        [plugins]="barChartPlugins"
-        [legend]="barChartLegend"
-        [type]="'bar'">
+<canvas
+  baseChart
+  class="w-100"
+  [data]="barChartData"
+  [options]="barChartOptions"
+  [plugins]="barChartPlugins"
+  [legend]="barChartLegend"
+  [type]="'bar'"
+>
 </canvas>
