--- a/src/app/pages/components/cadastro-produto/cadastro-produto.component.html
+++ b/src/app/pages/components/cadastro-produto/cadastro-produto.component.html
@@ -1,6 +1,6 @@
 <div class="form">
   <div class="container-fluid row">
-    <div class="col-6">
+    <div class="col-7">
       <section class="row">
         <label for="">Nome: <span>*</span></label>
         <input type="text" [(ngModel)]="produto.nome" />
@@ -10,6 +10,7 @@
         <input type="number" step="0.1" min="0" class="col-5" [(ngModel)]="produto.preco" />
         <select class="col-6" [(ngModel)]="produto.tipo">
           <option value="">==Tipo==</option>
+          <option *ngFor="let item of types" value="{{item}}">{{item}}</option>
         </select>
       </section>
       <section class="row">
@@ -32,21 +33,21 @@
         <button class="btn" (click)="addProduct()">Salvar</button>
       </section>
     </div>
-    <div class="col-6">
-      <app-chart-cadastro></app-chart-cadastro>
+    <div class="col-5">
+      <app-chart-cadastro [entrada]="entrada" [saida]="saida"></app-chart-cadastro>
     </div>
   </div>
   <div class="table-container">
     <table class="table">
       <thead>
         <tr>
-          <th (click)="sortList('tipo')">Tipo</th>
-          <th (click)="sortList('nome')">Nome</th>
-          <th (click)="sortList('preco')">Preço</th>
-          <th (click)="sortList('descricao')">Descrição</th>
-          <th (click)="sortList('quantidade')">Quantidade</th>
-          <th (click)="sortList('telefone')">Telefone</th>
-          <th (click)="sortList('data')">Data</th>
+          <th>Tipo</th>
+          <th>Nome</th>
+          <th>Preço</th>
+          <th>Descrição</th>
+          <th>Quantidade</th>
+          <th>Telefone</th>
+          <th>Data</th>
           <th></th>
         </tr>
       </thead>
