--- a/src/app/pages/components/header/header.component.scss
+++ b/src/app/pages/components/header/header.component.scss
@@ -1,11 +1,12 @@
 div{
     margin-top: 1rem;
+    padding-bottom: 1rem;
     width: 100%;
-    height: 100px;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     border-bottom: 1rem solid red;
     img {
-        height: 80%;
+        height: 5rem;
     }
 }
